@@ -2,7 +2,9 @@ package com.example.AxmCarService;
 
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
-import org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration;
+
+import org.springframework.boot.builder.SpringApplicationBuilder;
+import org.springframework.boot.web.servlet.support.SpringBootServletInitializer;
 import org.springframework.context.annotation.Bean;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.web.cors.CorsConfiguration;
@@ -13,7 +15,7 @@ import java.util.Arrays;
 import java.util.List;
 
 @SpringBootApplication()
-public class AxmCarServiceApplication {
+public class AxmCarServiceApplication  {
 
 	public static void main(String[] args) {
 
@@ -32,8 +34,15 @@ public class AxmCarServiceApplication {
 		UrlBasedCorsConfigurationSource urlBasedCorsConfigurationSource = new UrlBasedCorsConfigurationSource();
 		CorsConfiguration corsConfiguration = new CorsConfiguration();
 		corsConfiguration.setAllowCredentials(true);
-		corsConfiguration.setAllowedOrigins(List.of("http://localhost:4200", "http://192.168.0.175:4200", "http://localhost:3000", "http://securecapita.org"));
-		//corsConfiguration.setAllowedOrigins(Arrays.asList("*"));
+
+		/* corsConfiguration.setAllowedOrigins(List.of("http://localhost:4200",
+				"http://localhost:4220",
+				"http://192.168.0.175:4200",
+				"http://192.168.0.175:4220",
+				"http://localhost:3000",
+				"http://securecapita.org")); */
+
+		corsConfiguration.setAllowedOriginPatterns(List.of("*"));
 		corsConfiguration.setAllowedHeaders(Arrays.asList("Origin", "Access-Control-Allow-Origin", "Content-Type",
 				"Accept", "Jwt-Token", "Authorization", "Origin", "Accept", "X-Requested-With",
 				"Access-Control-Request-Method", "Access-Control-Request-Headers"));
@@ -43,5 +52,7 @@ public class AxmCarServiceApplication {
 		urlBasedCorsConfigurationSource.registerCorsConfiguration("/**", corsConfiguration);
 		return new CorsFilter(urlBasedCorsConfigurationSource);
 	}
+
+
 
 }
